# archconfig

./: .zshrc  Cargo.toml  README.md  control_volume.sh  maintenance.sh  plasma_theme_switcher.sh  programs.sh
cmd/: Cargo.toml
cmd/src/: args.rs  main.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  url.rs
core/src/cmd/: add.rs  args.rs  config.rs  daemon.rs  mod.rs  publish.rs  pull.rs  push.rs  remove.rs
core/src/models/: command.rs  config.rs  daemon.rs  mod.rs  options.rs
core/src/utils/: url.rs
daemon/: Cargo.toml
daemon/src/: daemon.rs  lib.rs  watch.rs
scripts/: .zshrc
src/: main.rs
