[package]
name = "dotsy_core"
version = "0.1.0"
authors = ["Eduardo Flores <edfloreshz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
clap = "2.33.3"
text_io = "0.1.8"
dirs = "3.0.2"
colour = "0.6.0"
dotsy_daemon = { path = "../daemon"}