[package]
name = "dotsy_daemon"
version = "0.1.0"
authors = ["Eduardo Flores <edfloreshz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
notify = "4.0.17"
dirs = "3.0.2"
colour = "0.6.0"
psutil = { version = "3.2.0", default-features = false, features = ["process"] }